<resources>
    <string name="app_name">BeautyBook</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="display_name">Display Name</string>
    <string name="name">Name</string>
    <string name="Register_button">Don\'t have an account? Register here!</string>
</resources>
