<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purplegradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="12dp"
        android:text="@string/password"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="12dp"
        android:text="@string/username"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLastName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="12dp"
        android:text="@string/email"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFirstName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="12dp"
        android:text="@string/last_name"
        android:textColor="#000000" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="540dp"
        android:text="@string/register_button" />

    <EditText
        android:id="@+id/etPasswordC"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="62dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="62dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="62dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="118dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="118dp"
        android:fontFamily="@font/parisienne"
        android:text="@string/register_button"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="62dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="62dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="62dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegister"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="12dp"
        android:text="@string/first_name"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvPasswordC"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:text="@string/confirm_password"
        android:textColor="#000000" />

    <Button
        android:id="@+id/bCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordC"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="62dp"
        android:text="@string/cancel" />

    <ProgressBar
        android:id="@+id/pbProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordC"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="281dp"
        android:visibility="invisible" />

</RelativeLayout>