<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="236dp"
        android:layout_height="197dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/blacklogo" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="62dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:padding="4dp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="228dp"
        android:textColor="#000000"
        tools:text="@string/username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="62dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:padding="4dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="229dp"
        android:text="@string/password"
        android:textColor="#000000" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="62dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/login_button"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="62dp"
        android:background="#494850"
        android:text="@string/register_button" />
</RelativeLayout>